tests/language_modules/12_type_conflicts/invalid_semantics/type_record_name_collision.vf
module TypeRecordNameCollision

type Account is Integer
type Account is record
    id: Integer
end record

end TypeRecordNameCollision